Resolve lots of sonar minor code smells