@@ -1,5 +1,5 @@
 /**
- *    Copyright 2006-2018 the original author or authors.
+ *    Copyright 2006-2019 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -122,7 +122,7 @@ public class ObjectFactory {
 
         try {
             Class<?> clazz = externalClassForName(type);
-            answer = clazz.newInstance();
+            answer = clazz.getConstructor().newInstance();
         } catch (Exception e) {
             throw new RuntimeException(getString(
                     "RuntimeError.6", type), e); //$NON-NLS-1$
@@ -175,7 +175,7 @@ public class ObjectFactory {
         try {
             Class<?> clazz = internalClassForName(type);
 
-            answer = clazz.newInstance();
+            answer = clazz.getConstructor().newInstance();
         } catch (Exception e) {
             throw new RuntimeException(getString(
                     "RuntimeError.6", type), e); //$NON-NLS-1$
